--- a/app/imports/ui/ColumnGridStyle.less
+++ b/app/imports/ui/ColumnGridStyle.less
@@ -2,7 +2,7 @@
 // the import logic
 .ce-column-grid {
     --columnWidth: 20rem;
-    --headerHight: 5rem;
+    --headerHight: 6rem;
     --spanHeader: 1;
     min-width: 100%;
     height: 100%;
@@ -16,7 +16,8 @@
   
     display: grid;
     grid-template-columns: repeat(20, var(--columnWidth, 20rem));
-    grid-template-rows: var(--headerHight, 5rem) calc(100%~"-" --headerHight);
+    grid-template-rows: var(--headerHight, 5rem) calc(100% ~"-" var(--headerHight));
+    gap: 1rem;
     grid-auto-flow: column dense;
   
   div {
@@ -32,6 +33,8 @@
   }
 
   .ce-grid-header {
+    max-height: var(--headerHight);
+    overflow: hidden;
     grid-column: 1 ~"/" span var(--spanHeader, 1);
     grid-row: 1 ~"/" 1;
   }
